--- a/index.html
+++ b/index.html
@@ -99,16 +99,17 @@
         <a href="#importance" class="lightbutton">LEARN MORE</a>
     </div>
     <div class="video-container desktop">
-        <video width="80%" controls>
-            <source src="images/AIMedicine.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+      <video width="80%" controls poster="images/vimgae.png">
+        <source src="images/AIMedicine.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    
     </div>
 </header>
 
 <div class="mobile">
-  <video width="100%" controls>
-      <source src="AIMedicine.mp4" type="video/mp4">
+  <video width="100%" controls poster="images/vimgae.png">
+      <source src="images/AIMedicine.mp4" type="video/mp4">
       Your browser does not support the video tag.
   </video>
 </div>
